--- a/flask-app/templates/layouts/main.html
+++ b/flask-app/templates/layouts/main.html
@@ -20,7 +20,7 @@
 <!-- /styles -->
 
 <!-- favicons -->
-<link rel="shortcut icon" href="/static/ico/favicon.ico">
+<link rel="shortcut icon" href="static/ico/favicon.ico">
 <!-- /favicons -->
 
 <!-- scripts -->
@@ -46,7 +46,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            {# <li {% if request.endpoint == 'about' %} class="active" {% endif %}><a href="{{ url_for('') }}">About</a></li> #}
+            <li {% if request.endpoint == 'search' %} class="active" {% endif %}><a href="{{ url_for('search') }}">Search</a></li>
+            <li {% if request.endpoint == 'history' %} class="active" {% endif %}><a href="{{ url_for('history') }}">History</a></li>
             {#
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -61,6 +62,9 @@
                 </ul>
               </li>
             #}
+          </ul>
+          <ul class="nav navbar-nav pull-right">
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
