fixed login and logout issues, formatted history page

--- a/flask-app/templates/layouts/main.html
+++ b/flask-app/templates/layouts/main.html
@@ -64,7 +64,9 @@
             #}
           </ul>
           <ul class="nav navbar-nav pull-right">
-            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% if not login_missing %} <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% else %} <li><a href="{{ url_for('login') }}">Login</a></li>
+            {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
