--- a/flask-app/templates/forms/search.html
+++ b/flask-app/templates/forms/search.html
@@ -1,12 +1,17 @@
-{% extends 'layouts/main.html' %}
+{% extends 'layouts/search.html' %}
 {% block title %}Search{% endblock %}
 {% block content %}
-  <form method="POST" class="form">
-    {{ form.csrf_token }}
-    {{ form.gtin(class_ = 'form-control first-input', placeholder = form.gtin.label.text, required = true, autofocus = true) }}
-    <input type="submit" value="Submit" class="btn btn-primary btn-lg btn-block">
-  </form>
-  {% if ingredients %}
-    <h1>{{ ingredients }}</h1>
-  {% endif %}
+<h1>Take a snapshot of the current video stream</h1>
+Click on the Start WebCam button.
+    <p>
+    <button onclick="startWebcam();">Start WebCam</button>
+    <button onclick="stopWebcam();">Stop WebCam</button> 
+    <button onclick="snapshot();">Take Snapshot</button> 
+    </p>
+    <video onclick="snapshot(this);" width=400 height=400 id="video" controls autoplay></video>
+<p>
+    Screenshot : <p>
+    <img id="uploadImage">
+    <canvas  id="myCanvas" width="400" height="350"></canvas>
+</p></p>
 {% endblock %}
