--- a/flask-app/templates/layouts/search.html
+++ b/flask-app/templates/layouts/search.html
@@ -17,6 +17,7 @@
 <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.responsive.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.quickfix.css" />
+<link type="text/css" rel="stylesheet" href="/static/css/snapshot.css" />
 <!-- /styles -->
 
 <!-- favicons -->
@@ -28,7 +29,7 @@
 <!-- /scripts -->
 
 </head>
-<body onload="init();">
+<body>
 
   <!-- Wrap all page content here -->
   <div id="wrap">
