--- a/flask-app/templates/pages/summary.html
+++ b/flask-app/templates/pages/summary.html
@@ -6,24 +6,32 @@
   <div class="page-header">
     <h1>Ingredients</h1>
   </div>
-
   {% if ing_label_dict %}
-    <div class="list-group">
-      {% for ingredient, label in ing_label_dict.items() %}
-        {% if label == "mostly safe" %}
-            <div class="list-group-item list-group-item-success">
-        {% elif label == "controversial" %}
-            <div class="list-group-item list-group-item-warning">
-        {% elif label == "not recommended" %}
-            <div class="list-group-item list-group-item-danger">
-        {% elif label == "unknown" %}
-            <div class="list-group-item list-group-item-secondary">
-        {% endif %}
-          <h5 class="mb-1">{{ ingredient }} - {{ label }}</h5>
+  <div class="row">
+    <div class="col-md-6">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ title.owner }} {{ title.name }} {{ title.subbrand }} - {{ gtin_upc }}</h3>
+            </div>
+        <ul class="list-group">
+            {% for ingredient, label in ing_label_dict.items() %}
+                {% if label == "mostly safe" %}
+                    <li class="list-group-item list-group-item-success">
+                {% elif label == "controversial" %}
+                    <li class="list-group-item list-group-item-warning">
+                {% elif label == "not recommended" %}
+                    <li class="list-group-item list-group-item-danger">
+                {% elif label == "unknown" %}
+                    <li class="list-group-item list-group-item-secondary">
+                {% endif %}
+                        {{ ingredient }} - {{ label }}
+                    </li>
+            {% endfor %}
+        </ul>
         </div>
-      {% endfor %}
     </div>
-  {% else %}
+    </div>
+    {% else %}
     <div class="alert alert-info" role="alert">
       No ingredients found.
     </div>
