--- a/flask-app/templates/layouts/search.html
+++ b/flask-app/templates/layouts/search.html
@@ -10,9 +10,9 @@
 <!-- /meta -->
 
 <!-- styles -->
-<link type="text/css" rel="stylesheet" href="/static/css/font-awesome-4.1.0.min.css" />
-<link type="text/css" rel="stylesheet" href="/static/css/bootstrap-3.1.1.min.css">
-<link type="text/css" rel="stylesheet" href="/static/css/bootstrap-theme-3.1.1.min.css" />
+<link type="text/css" rel="stylesheet" href="/static/vendor/css/font-awesome-4.1.0.min.css" />
+<link type="text/css" rel="stylesheet" href="/static/vendor/css/bootstrap-3.1.1.min.css">
+<link type="text/css" rel="stylesheet" href="/static/vendor/css/bootstrap-theme-3.1.1.min.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/layout.main.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.responsive.css" />
@@ -101,8 +101,8 @@
 
   <script type="text/javascript" src="/static/js/snapshot.js"></script>
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
-  <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
+  <script>window.jQuery || document.write('<script type="text/javascript" src="/static/vendor/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
+  <script type="text/javascript" src="/static/vendor/js/libs/bootstrap-3.1.1.min.js" defer></script>
   <script type="text/javascript" src="/static/js/plugins.js" defer></script>
   <script type="text/javascript" src="/static/js/script.js" defer></script>
 
