added details to index page

--- a/flask-app/templates/pages/index.html
+++ b/flask-app/templates/pages/index.html
@@ -1,11 +1,20 @@
 {% extends 'layouts/main.html' %}
-{% block title %}FVSR LM{% endblock %}
+{% block title %}FoodvisorLM{% endblock %}
 {% block content %}
 
 <div class="container h-100">
     <div class="row align-items-center justify-content-center full-height">
         <div class="col text-center">
             <h1>Foodvisor LM</h1>
+        </div>
+        <hr>
+        <div class="col">
+            <p class="lead">
+                Find potentially harmful ingredients in packaged food and find similar products built using AWS OpenSearch, SageMaker, DynamoDB, Cognito, Docker, Flask, and OpenAI API.
+                <br><br>
+                Developed by Anudeep Tubati, New York University
+                <br><a href="https://github.com/NeuralFlux/foodvisorLM" target="_blank">Source</a>
+            </p>
         </div>
     </div>
 </div>
