fixed hamburger menu issue, thanks to @manavkush

--- a/flask-app/templates/layouts/main.html
+++ b/flask-app/templates/layouts/main.html
@@ -6,7 +6,7 @@
 <!-- meta -->
 <meta name="description" content="">
 <meta name="author" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 <!-- /meta -->
 
 <!-- styles -->
@@ -100,7 +100,7 @@
 
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script type="text/javascript" src="/static/vendor/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
-  <script type="text/javascript" src="/static/vendor/js/libs/bootstrap-3.1.1.min.js" defer></script>
+  <script type="text/javascript" src="/static/vendor/js/bootstrap-3.1.1.min.js" defer></script>
   <script type="text/javascript" src="/static/js/plugins.js" defer></script>
   <script type="text/javascript" src="/static/js/script.js" defer></script>
 
