--- a/flask-app/templates/pages/index.html
+++ b/flask-app/templates/pages/index.html
@@ -12,6 +12,8 @@
             <p class="lead">
                 Find potentially harmful ingredients in packaged food and find similar products built using AWS OpenSearch, SageMaker, DynamoDB, Cognito, Docker, Flask, and OpenAI API.
                 <br><br>
+                Scanner may not work properly on mobile devices due to browser compatibility issues. Please use the barcode field instead.
+                <br><br>
                 Developed by Anudeep Tubati, New York University
                 <br><a href="https://github.com/NeuralFlux/foodvisorLM" target="_blank">Source</a>
             </p>
